Java 24 tilpasninger